<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_constraintHorizontal_chainStyle="spread_inside"

    tools:context=".activity.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:title="Tentang"
        app:titleTextColor="#ffffff" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_difilter"

        android:src="@drawable/about"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintWidth_percent=".3" />

    <TextView
        android:layout_marginTop="20dp"

        android:id="@+id/tv_about_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textAlignment="center"

        android:textSize="20sp"

        android:textColor="@color/colorPrimary"
        android:textStyle="bold"

        android:text="@string/about_description"

        app:layout_constraintTop_toBottomOf="@id/iv_logo"

        />


    <ImageView
        android:id="@+id/iv_foto_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/foto_1"
        app:layout_constraintDimensionRatio="1"

        android:layout_marginTop="30dp"

        app:layout_constraintEnd_toStartOf="@+id/iv_foto_2"
        app:layout_constraintHorizontal_bias="0.5"

        android:src="@drawable/foto3"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_about_description"
        app:layout_constraintWidth_percent=".4" />

    <ImageView
        android:id="@+id/iv_foto_2"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/foto_2"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="30dp"

        android:src="@drawable/foto4"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_foto_1"
        app:layout_constraintTop_toBottomOf="@id/tv_about_description"
        app:layout_constraintWidth_percent=".4" />
</androidx.constraintlayout.widget.ConstraintLayout>
