<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NilaiActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"

        app:title=""
        app:titleTextColor="#ffffff"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="30dp"

        android:id="@+id/iv_medal"

        app:layout_constraintWidth_percent=".5"
        app:layout_constraintDimensionRatio="1"
        android:src="@drawable/congratulation"
        android:contentDescription="@string/medal_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_medal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/score_selamat_text"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"

        android:id="@+id/tv_selamat"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_selamat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:id="@+id/tv_text_nilai"

        android:text="@string/score_nilai_text"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"

        />
    <TextView
android:id="@+id/tv_nilai"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_text_nilai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:textColor="#E47E00"
        android:textSize="30sp"
        android:textStyle="bold"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
